--- a/grph/css/light.css
+++ b/grph/css/light.css
@@ -2,7 +2,7 @@ svg {
   background: #ffffff;
 }
 svg * {
-  font-family: Corbel, Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 12px;
 }
 text {
@@ -48,10 +48,11 @@ rect.background {
 }
 div.tip {
   padding: 5px;
-  font-family: Corbel, Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 12px;
-  color: #000000;
-  background: rgba(128, 128, 128, 0.5);
+  color: #333333;
+  background: rgba(255, 255 , 255, 0.9);
+  border: 0.5px solid #333333;
 }
 rect.colour1,
 circle.colour1 {
