--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -1,9 +1,15 @@
+$sans: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+$serif: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+
+$black: #333333;
+
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: #333333; }
+  font-family: $sans;
+  color:$black; 
+}
 
 h1, h2, h3, h4 {
-  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+  font-family: $serif;
   color: #333333; }
 
   /* ==== TWO COLUMN LAYOUT ==== */
@@ -44,22 +50,35 @@ h1, h2, h3, h4 {
   }
 
 /* ==== GRAPH FORMATTING ==== */
+
 svg * {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
+  font-family: $sans;}
 
 div.tip {
   padding: 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: $sans;
   font-size: 12px;
-  color: #333333;
+  color: $black;
   background: rgba(255, 255, 255, 0.9);
   border: 0.5px solid #999999; }
 
-rect.colour1, circle.colour1 {
-  fill: #00a1cd;
+
+@mixin area($color){
+  fill: $color;
   fill-opacity: 0.8;
-  stroke: #00a1cd;
-  stroke-opacity: 1; }
+  stroke: $color;
+  stroke-opacity: 1;  
+}
+
+@mixin line($color){
+  stroke: $color;
+  stroke-opacity: 1;
+  fill: none; 
+}
+
+rect.colour1, circle.colour1 {
+  @include area(#00a1cd)
+}
 
 rect.colour2, circle.colour2 {
   fill: #0058b8;
