--- a/css/statminer.css
+++ b/css/statminer.css
@@ -47,7 +47,8 @@ div.tip {
   font-size: 12px;
   color: #333333;
   background: rgba(255, 255, 255, 0.9);
-  border: 0.5px solid #999999; }
+  border: 0.5px solid #999999;
+  box-shadow: 2px 2px 2px #888888; }
 
 rect.colour1, circle.colour1 {
   fill: #00a1cd;
