--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -60,7 +60,9 @@ div.tip {
   font-size: 12px;
   color: $black;
   background: rgba(255, 255, 255, 0.9);
-  border: 0.5px solid #999999; }
+  border: 0.5px solid #999999; 
+  box-shadow: 2px 2px 2px #888888;
+}
 
 
 @mixin area($color){
