--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -5,7 +5,7 @@ $black: #333333;
 
 body {
   font-family: $sans;
-  color:$black; 
+  color:$black;
 }
 
 h1, h2, h3, h4 {
@@ -23,6 +23,7 @@ h1, h2, h3, h4 {
 
   #main > article {
       margin: 0px;
+      min-height: 600px;
       padding: 5px;
       flex: 3 1 60%;
       order: 2;
@@ -60,7 +61,7 @@ div.tip {
   font-size: 12px;
   color: $black;
   background: rgba(255, 255, 255, 0.9);
-  border: 0.5px solid #999999; 
+  border: 0.5px solid #999999;
   box-shadow: 2px 2px 2px #888888;
 }
 
@@ -69,13 +70,13 @@ div.tip {
   fill: $color;
   fill-opacity: 0.8;
   stroke: $color;
-  stroke-opacity: 1;  
+  stroke-opacity: 1;
 }
 
 @mixin line($color){
   stroke: $color;
   stroke-opacity: 1;
-  fill: none; 
+  fill: none;
 }
 
 rect.colour1, circle.colour1 {
