--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -164,3 +164,19 @@ line.colour8, path.colour8 {
   stroke: #e94c0a;
   stroke-opacity: 1;
   fill: none; }
+
+
+$low_stroke_opacity: 0.5;
+$low_fill_opacity: 0.2;
+
+
+line.colour.colourlow,
+path.colour.colourlow {
+  stroke-opacity: $low_stroke_opacity;
+}
+
+rect.colour.colourlow,
+circle.colour.colourlow {
+  fill-opacity: $low_fill_opacity;
+  stroke-opacity: $low_stroke_opacity;
+}
