--- a/css/statminer.css
+++ b/css/statminer.css
@@ -141,9 +141,11 @@ line.colour8, path.colour8 {
 
 line.colour.colourlow,
 path.colour.colourlow {
-  stroke-opacity: 0.5; }
+  stroke-opacity: 0.4;
+  transition: stroke-opacity 0.2s; }
 
 rect.colour.colourlow,
 circle.colour.colourlow {
   fill-opacity: 0.2;
-  stroke-opacity: 0.5; }
+  stroke-opacity: 0.4;
+  transition: stroke-opacity 0.2s, fill-opacity 0.2s; }
