--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -166,17 +166,20 @@ line.colour8, path.colour8 {
   fill: none; }
 
 
-$low_stroke_opacity: 0.5;
+$low_stroke_opacity: 0.4;
 $low_fill_opacity: 0.2;
+$low_duration: 0.2s;
 
 
 line.colour.colourlow,
 path.colour.colourlow {
   stroke-opacity: $low_stroke_opacity;
+  transition: stroke-opacity $low_duration;
 }
 
 rect.colour.colourlow,
 circle.colour.colourlow {
   fill-opacity: $low_fill_opacity;
   stroke-opacity: $low_stroke_opacity;
+  transition: stroke-opacity $low_duration, fill-opacity $low_duration;
 }
