--- a/css/statminer.css
+++ b/css/statminer.css
@@ -1,10 +1,22 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
   color: #333333; }
 
 h1, h2, h3, h4 {
   font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-  color: #333333; }
+  color: #333333;
+  font-weight: bold; }
+
+h3 {
+  font-size: 21px; }
+
+nav h3 {
+  font-size: 18px;
+  margin-bottom: 8px; }
+
+nav .dimensionFilter {
+  margin-top: 5px; }
 
 /* ==== TWO COLUMN LAYOUT ==== */
 #main {
