--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -5,12 +5,31 @@ $black: #333333;
 
 body {
   font-family: $sans;
+  font-size: 16px;
   color:$black;
 }
 
 h1, h2, h3, h4 {
   font-family: $serif;
-  color: #333333; }
+  color: $black;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 21px;
+}
+
+nav {
+  h3 {
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+
+  .dimensionFilter {
+    margin-top: 5px;
+  }
+}
+
 
   /* ==== TWO COLUMN LAYOUT ==== */
   #main {
