Split stylesheet into components

--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -3,202 +3,7 @@ $serif: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 
 $black: #333333;
 
-body {
-  font-family: $sans;
-  font-size: 16px;
-  color:$black;
-}
 
-h1, h2, h3, h4 {
-  font-family: $serif;
-  color: $black;
-  font-weight: bold;
-}
-
-h3 {
-  font-size: 21px;
-}
-
-nav {
-  h3 {
-    font-size: 18px;
-    margin-bottom: 8px;
-  }
-
-  .dimensionFilter {
-    margin-top: 5px;
-  }
-}
-
-
-  /* ==== TWO COLUMN LAYOUT ==== */
-  #main {
-      min-height: 800px;
-      margin: 0px;
-      padding: 5px 0px;
-      display: flex;
-      flex-flow: row;
-  }
-
-  #main > article {
-      margin: 0px;
-      min-height: 600px;
-      padding: 5px;
-      flex: 3 1 60%;
-      order: 2;
-  }
-
-  #main > nav {
-      margin: 0px;
-      padding: 5px;
-      border-right: 1px solid #eee;
-      flex: 0 0 350px;
-      order: 1;
-  }
-
-  /* Too narrow to support two columns */
-  @media all and (max-width: 640px) {
-    #main, #page {
-      flex-direction: column;
-    }
-    #main > article, #main > nav {
-      /* Return them to document order */
-      order: 0;
-      border-right: none;
-      border-bottom: 1px solid #eee;
-    }
-  }
-
-/* ==== GRAPH FORMATTING ==== */
-
-svg * {
-  font-family: $sans;}
-
-div.tip {
-  padding: 5px;
-  font-family: $sans;
-  font-size: 12px;
-  color: $black;
-  background: rgba(255, 255, 255, 0.9);
-  border: 0.5px solid #999999;
-  box-shadow: 2px 2px 2px #888888;
-}
-
-
-@mixin area($color){
-  fill: $color;
-  fill-opacity: 0.8;
-  stroke: $color;
-  stroke-opacity: 1;
-}
-
-@mixin line($color){
-  stroke: $color;
-  stroke-opacity: 1;
-  fill: none;
-}
-
-rect.colour1, circle.colour1 {
-  @include area(#00a1cd)
-}
-
-rect.colour2, circle.colour2 {
-  fill: #0058b8;
-  fill-opacity: 0.8;
-  stroke: #0058b8;
-  stroke-opacity: 1; }
-
-rect.colour3, circle.colour3 {
-  fill: #afcb05;
-  fill-opacity: 0.8;
-  stroke: #afcb05;
-  stroke-opacity: 1; }
-
-rect.colour4, circle.colour4 {
-  fill: #53a31d;
-  fill-opacity: 0.8;
-  stroke: #53a31d;
-  stroke-opacity: 1; }
-
-rect.colour5, circle.colour5 {
-  fill: #f39200;
-  fill-opacity: 0.8;
-  stroke: #f39200;
-  stroke-opacity: 1; }
-
-rect.colour6, circle.colour6 {
-  fill: #af0e80;
-  fill-opacity: 0.8;
-  stroke: #af0e80;
-  stroke-opacity: 1; }
-
-rect.colour7, circle.colour7 {
-  fill: #ffcc00;
-  fill-opacity: 0.8;
-  stroke: #ffcc00;
-  stroke-opacity: 1; }
-
-rect.colour8, circle.colour8 {
-  fill: #e94c0a;
-  fill-opacity: 0.8;
-  stroke: #e94c0a;
-  stroke-opacity: 1; }
-
-line.colour1, path.colour1 {
-  stroke: #00a1cd;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour2, path.colour2 {
-  stroke: #0058b8;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour3, path.colour3 {
-  stroke: #afcb05;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour4, path.colour4 {
-  stroke: #53a31d;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour5, path.colour5 {
-  stroke: #f39200;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour6, path.colour6 {
-  stroke: #af0e80;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour7, path.colour7 {
-  stroke: #ffcc00;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour8, path.colour8 {
-  stroke: #e94c0a;
-  stroke-opacity: 1;
-  fill: none; }
-
-
-$low_stroke_opacity: 0.4;
-$low_fill_opacity: 0.2;
-$low_duration: 0.2s;
-
-
-line.colour.colourlow,
-path.colour.colourlow {
-  stroke-opacity: $low_stroke_opacity;
-  transition: stroke-opacity $low_duration;
-}
-
-rect.colour.colourlow,
-circle.colour.colourlow {
-  fill-opacity: $low_fill_opacity;
-  stroke-opacity: $low_stroke_opacity;
-  transition: stroke-opacity $low_duration, fill-opacity $low_duration;
-}
+@import 'Source/base.scss';
+@import 'Source/two_column_layout.scss';
+@import 'Source/graph.scss';
