--- a/css/Source/graph.scss
+++ b/css/Source/graph.scss
@@ -1,71 +1,34 @@
-body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 16px;
-  color: #333333; }
-
-h1, h2, h3, h4 {
-  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-  color: #333333;
-  font-weight: bold; }
-
-h3 {
-  font-size: 21px; }
-
-nav h3 {
-  font-size: 18px;
-  margin-bottom: 8px; }
-
-nav .dimensionFilter {
-  margin-top: 5px; }
-
-#main {
-  min-height: 800px;
-  margin: 0px;
-  padding: 5px 0px;
-  display: flex;
-  flex-flow: row; }
-
-#main > article {
-  margin: 0px;
-  min-height: 600px;
-  padding: 5px;
-  flex: 3 1 60%;
-  order: 2; }
-
-#main > nav {
-  margin: 0px;
-  padding: 5px;
-  border-right: 1px solid #eee;
-  flex: 0 0 350px;
-  order: 1; }
-
-/* Too narrow to support two columns */
-@media all and (max-width: 640px) {
-  #main, #page {
-    flex-direction: column; }
-  #main > article, #main > nav {
-    /* Return them to document order */
-    order: 0;
-    border-right: none;
-    border-bottom: 1px solid #eee; } }
 
 svg * {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
+  font-family: $sans;}
 
 div.tip {
   padding: 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: $sans;
   font-size: 12px;
-  color: #333333;
+  color: $black;
   background: rgba(255, 255, 255, 0.9);
   border: 0.5px solid #999999;
-  box-shadow: 2px 2px 2px #888888; }
+  box-shadow: 2px 2px 2px #888888;
+}
+
+
+@mixin area($color){
+  fill: $color;
+  fill-opacity: 0.8;
+  stroke: $color;
+  stroke-opacity: 1;
+}
+
+@mixin line($color){
+  stroke: $color;
+  stroke-opacity: 1;
+  fill: none;
+}
 
 rect.colour1, circle.colour1 {
-  fill: #00a1cd;
-  fill-opacity: 0.8;
-  stroke: #00a1cd;
-  stroke-opacity: 1; }
+  @include area(#00a1cd)
+}
 
 rect.colour2, circle.colour2 {
   fill: #0058b8;
@@ -149,13 +112,21 @@ line.colour8, path.colour8 {
   stroke-opacity: 1;
   fill: none; }
 
+
+$low_stroke_opacity: 0.4;
+$low_fill_opacity: 0.2;
+$low_duration: 0.2s;
+
+
 line.colour.colourlow,
 path.colour.colourlow {
-  stroke-opacity: 0.4;
-  transition: stroke-opacity 0.2s; }
+  stroke-opacity: $low_stroke_opacity;
+  transition: stroke-opacity $low_duration;
+}
 
 rect.colour.colourlow,
 circle.colour.colourlow {
-  fill-opacity: 0.2;
-  stroke-opacity: 0.4;
-  transition: stroke-opacity 0.2s, fill-opacity 0.2s; }
+  fill-opacity: $low_fill_opacity;
+  stroke-opacity: $low_stroke_opacity;
+  transition: stroke-opacity $low_duration, fill-opacity $low_duration;
+}
