--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -7,3 +7,4 @@ $black: #333333;
 @import 'Source/base.scss';
 @import 'Source/two_column_layout.scss';
 @import 'Source/graph.scss';
+@import 'font-awesome/font-awesome.scss';
