--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -22,5 +22,21 @@ nav {
 
   .dimensionFilter {
     margin-top: 5px;
+    display: flex;
+  }
+
+  .Select {
+    flex: auto;
+  }
+
+  span.icon {
+    padding-left: 3px;
+    padding-right: 2px;
+    padding-top: 7px;
+    text-align: center;
+    border: #ccc 1px solid;
+    background: #ccc;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
   }
 }
