--- a/css/statminer.css
+++ b/css/statminer.css
@@ -17,7 +17,21 @@ nav h3 {
   margin-bottom: 8px; }
 
 nav .dimensionFilter {
-  margin-top: 5px; }
+  margin-top: 5px;
+  display: flex; }
+
+nav .Select {
+  flex: auto; }
+
+nav span.icon {
+  padding-left: 3px;
+  padding-right: 2px;
+  padding-top: 7px;
+  text-align: center;
+  border: #ccc 1px solid;
+  background: #ccc;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px; }
 
 #main {
   min-height: 800px;
