--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -3,6 +3,24 @@ $serif: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 
 $black: #333333;
 
+$lightblue: #00a1cd;
+$lightblue2: #0581a2;
+$darkblue: #0058b8;
+$darkblue2: #163a72;
+$grassgreen: #53a31d;
+$grassgreen2: #488225;
+$applegreen: #afcb05;
+$applegreen2: #899d0c;
+$yellow: #ffcc00;
+$yellow2: #e1b600;
+$orange: #f39200;
+$orange: #ce7c00;
+$red: #e94c0a;
+$red2: #b23d02;
+$purple: #af0e80;
+$purple2: #82045e;
+$lightgrey: #ececec;
+
 
 @import 'Source/base.scss';
 @import 'Source/two_column_layout.scss';
