--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -35,7 +35,8 @@ nav {
     padding-top: 7px;
     text-align: center;
     border: #ccc 1px solid;
-    background: #ccc;
+    background: #eee;
+    margin-right: -2px;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
   }
