--- a/css/statminer.css
+++ b/css/statminer.css
@@ -29,7 +29,8 @@ nav span.icon {
   padding-top: 7px;
   text-align: center;
   border: #ccc 1px solid;
-  background: #ccc;
+  background: #eee;
+  margin-right: -2px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px; }
 
