--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -14,12 +14,21 @@ $applegreen2: #899d0c;
 $yellow: #ffcc00;
 $yellow2: #e1b600;
 $orange: #f39200;
-$orange: #ce7c00;
+$orange2: #ce7c00;
 $red: #e94c0a;
 $red2: #b23d02;
 $purple: #af0e80;
 $purple2: #82045e;
 $lightgrey: #ececec;
+
+$colour1: $lightblue;
+$colour2: $darkblue;
+$colour3: $applegreen;
+$colour4: $grassgreen;
+$colour5: $orange;
+$colour6: $purple;
+$colour7: $yellow;
+$colour8: $red;
 
 
 @import 'Source/base.scss';
