--- a/css/statminer.css
+++ b/css/statminer.css
@@ -212,6 +212,38 @@ circle.colour.colourlow {
   stroke-opacity: 0.4;
   transition: stroke-opacity 0.2s, fill-opacity 0.2s; }
 
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(1) {
+  color: white;
+  background-color: #00a1cd; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(2) {
+  color: white;
+  background-color: #0058b8; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(3) {
+  color: white;
+  background-color: #afcb05; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(4) {
+  color: white;
+  background-color: #53a31d; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(5) {
+  color: white;
+  background-color: #f39200; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(6) {
+  color: white;
+  background-color: #af0e80; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(7) {
+  color: #333333;
+  background-color: #ffcc00; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(8) {
+  color: white;
+  background-color: #e94c0a; }
+
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
