--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -83,3 +83,32 @@ nav {
     background-color: $lightblue2;
     border-color: darken($lightblue2, 5%);
 }
+
+[data-tooltip]{
+  position: relative;
+  cursor: pointer;
+}
+
+// [data-tooltip]:after{
+//     z-index: 1000;
+//     padding: 8px;
+//     width: 160px;
+//     position: absolute;
+//     background-color: #000;
+//     background-color: hsla(0, 0%, 20%, 0.9);
+//     color: #fff;
+//     content: attr(data-tooltip);
+//     font-size: 14px;
+//     line-height: 1.2;
+//     bottom: 50%;
+//     display: inline-block;
+// }
+
+[data-tooltip]  .label:after {
+    font-family: FontAwesome;
+    content: $fa-var-info-circle;
+    //display: inline-block;
+    padding-left: 4px;
+    vertical-align: middle;
+}
+
