--- a/css/statminer.css
+++ b/css/statminer.css
@@ -1,249 +1,4 @@
 @charset "UTF-8";
-body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 16px;
-  color: #333333; }
-
-h1, h2, h3, h4 {
-  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-  color: #333333;
-  font-weight: bold; }
-
-h3 {
-  font-size: 21px; }
-
-nav h3 {
-  font-size: 18px;
-  margin-bottom: 8px; }
-
-nav .dimensionFilter {
-  margin-top: 5px;
-  display: flex; }
-
-nav .Select {
-  flex: auto; }
-
-nav span.icon {
-  padding-left: 3px;
-  padding-right: 2px;
-  padding-top: 7px;
-  text-align: center;
-  border: #ccc 1px solid;
-  background: #eee;
-  margin-right: -2px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px; }
-
-.radio-btns {
-  margin-left: -5px; }
-
-.radio-btn {
-  color: #00a1cd;
-  background-color: #fff;
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: 400;
-  text-align: center;
-  vertical-align: middle;
-  touch-action: manipulation;
-  cursor: pointer;
-  border: 1px solid #00a1cd;
-  white-space: nowrap;
-  padding: 6px 12px;
-  border-radius: 4px; }
-
-.radio-btn {
-  margin-left: 5px; }
-
-.radio-btn:active, .radio-btn:hover {
-  color: #0581a2;
-  background-color: #ececec;
-  border-color: #0581a2; }
-
-.radio-btn.selected {
-  color: #fff;
-  background-color: #00a1cd;
-  border-color: #008db4; }
-
-.radio-btn.selected:active, .radio-btn.selected:hover {
-  color: #fff;
-  background-color: #0581a2;
-  border-color: #046d89; }
-
-#main {
-  min-height: 800px;
-  margin: 0px;
-  padding: 5px 0px;
-  display: flex;
-  flex-flow: row; }
-
-#main > article {
-  margin: 0px;
-  min-height: 600px;
-  padding: 5px;
-  flex: 3 1 60%;
-  order: 2; }
-
-#main > nav {
-  margin: 0px;
-  padding: 5px;
-  border-right: 1px solid #eee;
-  flex: 0 0 350px;
-  order: 1; }
-
-/* Too narrow to support two columns */
-@media all and (max-width: 640px) {
-  #main, #page {
-    flex-direction: column; }
-  #main > article, #main > nav {
-    /* Return them to document order */
-    order: 0;
-    border-right: none;
-    border-bottom: 1px solid #eee; } }
-
-svg * {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
-
-div.tip {
-  padding: 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 12px;
-  color: #333333;
-  background: rgba(255, 255, 255, 0.9);
-  border: 0.5px solid #999999;
-  box-shadow: 2px 2px 2px #888888; }
-
-rect.colour1, circle.colour1 {
-  fill: #00a1cd;
-  fill-opacity: 0.8;
-  stroke: #00a1cd;
-  stroke-opacity: 1; }
-
-rect.colour2, circle.colour2 {
-  fill: #0058b8;
-  fill-opacity: 0.8;
-  stroke: #0058b8;
-  stroke-opacity: 1; }
-
-rect.colour3, circle.colour3 {
-  fill: #afcb05;
-  fill-opacity: 0.8;
-  stroke: #afcb05;
-  stroke-opacity: 1; }
-
-rect.colour4, circle.colour4 {
-  fill: #53a31d;
-  fill-opacity: 0.8;
-  stroke: #53a31d;
-  stroke-opacity: 1; }
-
-rect.colour5, circle.colour5 {
-  fill: #f39200;
-  fill-opacity: 0.8;
-  stroke: #f39200;
-  stroke-opacity: 1; }
-
-rect.colour6, circle.colour6 {
-  fill: #af0e80;
-  fill-opacity: 0.8;
-  stroke: #af0e80;
-  stroke-opacity: 1; }
-
-rect.colour7, circle.colour7 {
-  fill: #ffcc00;
-  fill-opacity: 0.8;
-  stroke: #ffcc00;
-  stroke-opacity: 1; }
-
-rect.colour8, circle.colour8 {
-  fill: #e94c0a;
-  fill-opacity: 0.8;
-  stroke: #e94c0a;
-  stroke-opacity: 1; }
-
-line.colour1, path.colour1 {
-  stroke: #00a1cd;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour2, path.colour2 {
-  stroke: #0058b8;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour3, path.colour3 {
-  stroke: #afcb05;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour4, path.colour4 {
-  stroke: #53a31d;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour5, path.colour5 {
-  stroke: #f39200;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour6, path.colour6 {
-  stroke: #af0e80;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour7, path.colour7 {
-  stroke: #ffcc00;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour8, path.colour8 {
-  stroke: #e94c0a;
-  stroke-opacity: 1;
-  fill: none; }
-
-line.colour.colourlow,
-path.colour.colourlow {
-  stroke-opacity: 0.4;
-  transition: stroke-opacity 0.2s; }
-
-rect.colour.colourlow,
-circle.colour.colourlow {
-  fill-opacity: 0.2;
-  stroke-opacity: 0.4;
-  transition: stroke-opacity 0.2s, fill-opacity 0.2s; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(1) {
-  color: white;
-  background-color: #00a1cd; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(2) {
-  color: white;
-  background-color: #0058b8; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(3) {
-  color: white;
-  background-color: #afcb05; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(4) {
-  color: white;
-  background-color: #53a31d; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(5) {
-  color: white;
-  background-color: #f39200; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(6) {
-  color: white;
-  background-color: #af0e80; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(7) {
-  color: #333333;
-  background-color: #ffcc00; }
-
-.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(8) {
-  color: white;
-  background-color: #e94c0a; }
-
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -2434,3 +2189,258 @@ circle.colour.colourlow {
   margin: 0;
   overflow: visible;
   clip: auto; }
+
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
+  color: #333333; }
+
+h1, h2, h3, h4 {
+  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+  color: #333333;
+  font-weight: bold; }
+
+h3 {
+  font-size: 21px; }
+
+nav h3 {
+  font-size: 18px;
+  margin-bottom: 8px; }
+
+nav .dimensionFilter {
+  margin-top: 5px;
+  display: flex; }
+
+nav .Select {
+  flex: auto; }
+
+nav span.icon {
+  padding-left: 3px;
+  padding-right: 2px;
+  padding-top: 7px;
+  text-align: center;
+  border: #ccc 1px solid;
+  background: #eee;
+  margin-right: -2px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px; }
+
+.radio-btns {
+  margin-left: -5px; }
+
+.radio-btn {
+  color: #00a1cd;
+  background-color: #fff;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  border: 1px solid #00a1cd;
+  white-space: nowrap;
+  padding: 6px 12px;
+  border-radius: 4px; }
+
+.radio-btn {
+  margin-left: 5px; }
+
+.radio-btn:active, .radio-btn:hover {
+  color: #0581a2;
+  background-color: #ececec;
+  border-color: #0581a2; }
+
+.radio-btn.selected {
+  color: #fff;
+  background-color: #00a1cd;
+  border-color: #008db4; }
+
+.radio-btn.selected:active, .radio-btn.selected:hover {
+  color: #fff;
+  background-color: #0581a2;
+  border-color: #046d89; }
+
+[data-tooltip] {
+  position: relative;
+  cursor: pointer; }
+
+[data-tooltip] .label:after {
+  font-family: FontAwesome;
+  content: "";
+  padding-left: 4px;
+  vertical-align: middle; }
+
+#main {
+  min-height: 800px;
+  margin: 0px;
+  padding: 5px 0px;
+  display: flex;
+  flex-flow: row; }
+
+#main > article {
+  margin: 0px;
+  min-height: 600px;
+  padding: 5px;
+  flex: 3 1 60%;
+  order: 2; }
+
+#main > nav {
+  margin: 0px;
+  padding: 5px;
+  border-right: 1px solid #eee;
+  flex: 0 0 350px;
+  order: 1; }
+
+/* Too narrow to support two columns */
+@media all and (max-width: 640px) {
+  #main, #page {
+    flex-direction: column; }
+  #main > article, #main > nav {
+    /* Return them to document order */
+    order: 0;
+    border-right: none;
+    border-bottom: 1px solid #eee; } }
+
+svg * {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
+
+div.tip {
+  padding: 5px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 12px;
+  color: #333333;
+  background: rgba(255, 255, 255, 0.9);
+  border: 0.5px solid #999999;
+  box-shadow: 2px 2px 2px #888888; }
+
+rect.colour1, circle.colour1 {
+  fill: #00a1cd;
+  fill-opacity: 0.8;
+  stroke: #00a1cd;
+  stroke-opacity: 1; }
+
+rect.colour2, circle.colour2 {
+  fill: #0058b8;
+  fill-opacity: 0.8;
+  stroke: #0058b8;
+  stroke-opacity: 1; }
+
+rect.colour3, circle.colour3 {
+  fill: #afcb05;
+  fill-opacity: 0.8;
+  stroke: #afcb05;
+  stroke-opacity: 1; }
+
+rect.colour4, circle.colour4 {
+  fill: #53a31d;
+  fill-opacity: 0.8;
+  stroke: #53a31d;
+  stroke-opacity: 1; }
+
+rect.colour5, circle.colour5 {
+  fill: #f39200;
+  fill-opacity: 0.8;
+  stroke: #f39200;
+  stroke-opacity: 1; }
+
+rect.colour6, circle.colour6 {
+  fill: #af0e80;
+  fill-opacity: 0.8;
+  stroke: #af0e80;
+  stroke-opacity: 1; }
+
+rect.colour7, circle.colour7 {
+  fill: #ffcc00;
+  fill-opacity: 0.8;
+  stroke: #ffcc00;
+  stroke-opacity: 1; }
+
+rect.colour8, circle.colour8 {
+  fill: #e94c0a;
+  fill-opacity: 0.8;
+  stroke: #e94c0a;
+  stroke-opacity: 1; }
+
+line.colour1, path.colour1 {
+  stroke: #00a1cd;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour2, path.colour2 {
+  stroke: #0058b8;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour3, path.colour3 {
+  stroke: #afcb05;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour4, path.colour4 {
+  stroke: #53a31d;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour5, path.colour5 {
+  stroke: #f39200;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour6, path.colour6 {
+  stroke: #af0e80;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour7, path.colour7 {
+  stroke: #ffcc00;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour8, path.colour8 {
+  stroke: #e94c0a;
+  stroke-opacity: 1;
+  fill: none; }
+
+line.colour.colourlow,
+path.colour.colourlow {
+  stroke-opacity: 0.4;
+  transition: stroke-opacity 0.2s; }
+
+rect.colour.colourlow,
+circle.colour.colourlow {
+  fill-opacity: 0.2;
+  stroke-opacity: 0.4;
+  transition: stroke-opacity 0.2s, fill-opacity 0.2s; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(1) {
+  color: white;
+  background-color: #00a1cd; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(2) {
+  color: white;
+  background-color: #0058b8; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(3) {
+  color: white;
+  background-color: #afcb05; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(4) {
+  color: white;
+  background-color: #53a31d; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(5) {
+  color: white;
+  background-color: #f39200; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(6) {
+  color: white;
+  background-color: #af0e80; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(7) {
+  color: #333333;
+  background-color: #ffcc00; }
+
+.axis[data-axis-name='colour'] .dimensionFilter .Select-value:nth-of-type(8) {
+  color: white;
+  background-color: #e94c0a; }
