--- a/css/statminer.css
+++ b/css/statminer.css
@@ -2271,6 +2271,14 @@ nav span.icon {
   padding-left: 4px;
   vertical-align: middle; }
 
+span.unit, span.filter {
+  background: silver;
+  border-radius: 5px;
+  border: silver solid;
+  margin-left: 5px;
+  color: gray;
+  font-size: 80%; }
+
 #main {
   min-height: 800px;
   margin: 0px;
