--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -113,10 +113,21 @@ nav {
 }
 
 span.unit, span.filter {
-  background: silver;
-  border-radius: 5px;
-  border: silver solid;
+  background: #ccc;
+  border-radius: 4px;
+  border: #ccc solid;
   margin-left: 5px;
-  color: gray;
+  color: white;
   font-size: 80%;
+  padding: 2px;
+  padding-bottom: 0px;
+}
+
+div.loading {
+  position: absolute;
+  top: 30%;
+  left: 60%;
+  z-index: 10;
+  color: $lightblue;
+  opacity: 0.8;
 }
