--- a/css/statminer.css
+++ b/css/statminer.css
@@ -2272,12 +2272,22 @@ nav span.icon {
   vertical-align: middle; }
 
 span.unit, span.filter {
-  background: silver;
-  border-radius: 5px;
-  border: silver solid;
+  background: #ccc;
+  border-radius: 4px;
+  border: #ccc solid;
   margin-left: 5px;
-  color: gray;
-  font-size: 80%; }
+  color: white;
+  font-size: 80%;
+  padding: 2px;
+  padding-bottom: 0px; }
+
+div.loading {
+  position: absolute;
+  top: 30%;
+  left: 60%;
+  z-index: 10;
+  color: #00a1cd;
+  opacity: 0.8; }
 
 #main {
   min-height: 800px;
