--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -135,5 +135,5 @@ div.loading {
 
 // fixes the tags with large height
 .Select--multi .Select-value {
-  max-height: 1.8em;
+  /*max-height: 1.8em;*/
 }
