--- a/css/statminer.css
+++ b/css/statminer.css
@@ -2290,7 +2290,7 @@ div.loading {
   opacity: 0.8; }
 
 .Select--multi .Select-value {
-  max-height: 1.8em; }
+  /*max-height: 1.8em;*/ }
 
 #main {
   min-height: 800px;
