--- a/css/statminer.css
+++ b/css/statminer.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@import url(../grph/css/light.css);
+@import url(../node_modules/react-virtualized/styles.css);
+@import url(../node_modules/react-select/dist/react-select.css);
+@import url(../node_modules/react-virtualized-select/styles.css);
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
