--- a/css/statminer.scss
+++ b/css/statminer.scss
@@ -22,13 +22,13 @@ $purple2: #82045e;
 $lightgrey: #ececec;
 
 // component stuff, needed by the application
-@import '../grph/css/light.css';
-@import '../node_modules/react-virtualized/styles.css';
-@import '../node_modules/react-select/dist/react-select.css';
-@import '../node_modules/react-virtualized-select/styles.css';
+@import '../grph/css/light'; 
+@import '../node_modules/react-virtualized/styles';
+@import '../node_modules/react-select/dist/react-select';
+@import '../node_modules/react-virtualized-select/styles';
 
-@import 'font-awesome/font-awesome.scss';
-@import 'Source/base.scss';
-@import 'Source/two_column_layout.scss';
-@import 'Source/graph.scss';
+@import 'font-awesome/font-awesome';
+@import 'Source/base';
+@import 'Source/two_column_layout';
+@import 'Source/graph';
 //@import 'Source/_tooltip.scss';
