--- a/css/Source/two_column_layout.scss
+++ b/css/Source/two_column_layout.scss
@@ -35,6 +35,10 @@
     order: 0;
     border-right: none;
     border-bottom: 1px solid #eee;
-  }
-  
+  } 
+}
+
+header h3 {
+  margin-top: 10;
+  margin-bottom: 10;
 }
