--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -39,6 +39,7 @@ nav {
     margin-right: -2px;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+    color: $darkblue2;
   }
 }
 
@@ -109,13 +110,16 @@ nav {
     content: $fa-var-info-circle;
     //display: inline-block;
     padding-left: 4px;
+    color: $lightblue2;
     vertical-align: middle;
 }
 
 span.unit, span.filter {
-  background: #ccc;
+  //background: #ccc;
+  background: $lightblue;  
   border-radius: 4px;
-  border: #ccc solid;
+  //border: #ccc solid;
+  border: $lightblue solid;
   margin-left: 5px;
   color: white;
   font-size: 80%;
