--- a/css/Source/base.scss
+++ b/css/Source/base.scss
@@ -14,9 +14,13 @@ h3 {
   font-size: 21px;
 }
 
+div.mapping {
+  font-size: 90%;
+}
+
 nav {
   h3 {
-    font-size: 18px;
+    font-size: 100%;
     margin-bottom: 8px;
   }
 
