--- a/css/statminer.css
+++ b/css/statminer.css
@@ -2959,8 +2959,11 @@ h1, h2, h3, h4 {
 h3 {
   font-size: 21px; }
 
+div.mapping {
+  font-size: 90%; }
+
 nav h3 {
-  font-size: 18px;
+  font-size: 100%;
   margin-bottom: 8px; }
 
 nav .dimensionFilter {
